fix: category controller with IDto